// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Component /> Component with auto layout 1`] = `
<component
  cornerRadius={10}
  horizontalPadding={4}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  layoutMode="HORIZONTAL"
  strokeWeight={1}
  strokes={
    Array [
      Object {
        "color": Object {
          "b": 0.12549019607843137,
          "g": 0.12549019607843137,
          "r": 0.13333333333333333,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  style={
    Object {
      "borderColor": "#222020",
      "borderRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "paddingBottom": 1,
      "paddingLeft": 4,
      "paddingRight": 4,
      "paddingTop": 1,
    }
  }
  verticalPadding={1}
/>
`;

exports[`<Component /> Component with border 1`] = `
<component
  cornerRadius={10}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  strokeWeight={1}
  strokes={
    Array [
      Object {
        "color": Object {
          "b": 0.12549019607843137,
          "g": 0.12549019607843137,
          "r": 0.13333333333333333,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  style={
    Object {
      "borderColor": "#222020",
      "borderRadius": 10,
      "borderWidth": 1,
    }
  }
/>
`;

exports[`<Component /> Component with color background 1`] = `
<component
  backgrounds={
    Array [
      Object {
        "color": Object {
          "b": 0,
          "g": 1,
          "r": 0.10588235294117647,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "backgroundColor": "#1bff00",
    }
  }
/>
`;

exports[`<Component /> Component with image background 1`] = `
<component
  backgrounds={
    Array [
      Object {
        "color": Object {
          "b": 0.1607843137254902,
          "g": 0.5450980392156862,
          "r": 1,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "backgroundColor": "#ff8b29",
      "backgroundImage": "./image.png",
      "backgroundSize": "cover",
    }
  }
/>
`;

exports[`<Component /> Component with layout style properties 1`] = `
<component
  height={200}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "height": 200,
      "left": 20,
      "top": 50,
      "width": 100,
    }
  }
  width={100}
  x={20}
  y={50}
/>
`;

exports[`<Component /> Component without props 1`] = `
<component
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={Object {}}
/>
`;
